# Sunrise

./: .dockerignore  .gitignore  .gitmodules  .index  CMakeLists.txt  City.ipynb  Dockerfile  Observation.ipynb  Playground.ipynb  README.md  Roads.ipynb  Sunrise - Preprocess Earth.ipynb  Sunrise - Preprocess Observation.ipynb  Sunrise - Render Earth.ipynb  Sunrise - Render Observation.ipynb  Sunrise - Render Preprocessed Data (1).ipynb  Sunrise - Render Preprocessed Data.ipynb  Sunrise - Renderer.ipynb  Sunrise Demo Playground.ipynb  Sunrise-Earth.ipynb  Untitled.ipynb  alt.ipynb  background.ipynb  config.toml  env.sh  failed_species.txt  go.sh  hdri.ipynb  ip.txt  observation2.ipynb  pyproject.toml  render-times.txt  runobs.ipynb  safespecies.json  script.txt  server.txt  species.json  species_matrix.csv  terrain.ipynb  test.ipynb  (+4 more)
archive/: Sunrise - Render Preprocessed DataTT.ipynb
background-shelve/: Sunrise.shelve
geo/: geo.js  package-lock.json  package.json  park.js  parkGeo.json
notebooks/: Earth.ipynb  hdri.ipynb  trail.ipynb
src/: main.cpp  main.py
src/city/: config.py  main.py  scene.py  server.py
src/city/static/: EnvironmentMesh.js  arcball.js  history.js  park.json.old  path.js  utils.js
src/city/templates/: index.html.template
src/ospray/: __init__.py
src/sunrise/: __init__.py  __main__.py  _auto.py  config.py  main.py  model.py  old-scene.py  scene.py  server.py  util.py
src/sunrise-cxx/: .gitignore  Dockerfile  Makefile  compile_flags.txt
src/sunrise-solid/: index.html  jsconfig.json  package-lock.json  package.json
src/sunrise-solid/src/: App.jsx  App.module.css  config.js
src/sunrise/static/: EnvironmentMesh.js  Kingston Pk (Path).json  Kingston.json  RecenterControls.js  ReverseTrackball.js  app.css  arcball.js  index.js  map.js  math.js  mission.js  park.json  (+5 more)
(+62 files in other folders)
